--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "./node_modules/eslint/bin/eslint.js --ext \".js\" src; ./node_modules/eslint/bin/eslint.js --ext \".jsx\" src",
+    "lint:fix": "./node_modules/eslint/bin/eslint.js --fix --ext \".js\" src; ./node_modules/eslint/bin/eslint.js --fix --ext \".jsx\" src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.13.6",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
